Update conformance checker and APM verifier